conflict extra lines

--- a/conflict_testing.cfg
+++ b/conflict_testing.cfg
@@ -10,6 +10,10 @@ hostname conflictname
 boot-start-marker
 boot-end-marker
 !
+add extra lines conflict
+add extra lines conflict
+add extra lines conflict
+!
 enable password cisco123
 !
 username jsomeone password 0 cg6#107X
